y overflow fix

--- a/styles/SoopXContrastrijk.css
+++ b/styles/SoopXContrastrijk.css
@@ -14,6 +14,7 @@ body {
 /* The master code */
 main {
   display: flex;
+  height: 100vh;
 }
 
 header {
