--- a/styles/aangetast.css
+++ b/styles/aangetast.css
@@ -14,6 +14,7 @@ body {
 /* The master code */
 main {
   display: flex;
+  height: 100vh;
 }
 
 header {
@@ -294,7 +295,7 @@ h1 {
     left: 0;
     bottom: 0;
     width: 100%;
-    z-index: -999;
+    z-index: 1;
 }
 
 .copyright-mobile {
